--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -43,32 +43,32 @@
                 <TextBlock Foreground="Black" Text="Huong Viet Restaurant" VerticalAlignment="Center" FontSize="22" FontFamily="VNI-OngDoHL"/>
             </StackPanel>
             <StackPanel VerticalAlignment="Center" Orientation="Horizontal" HorizontalAlignment="Right">
-                <ComboBox x:Name="cmbChiNhanh" Margin="10 0 0 0" Foreground="Black" materialDesign:HintAssist.Hint="Chi nhánh" Style="{StaticResource MaterialDesignFloatingHintComboBox}" FontFamily="Times New Roman" FontSize="16" Loaded="loadChiNhanh" SelectionChanged="CmbChiNhanh_SelectionChanged">
+                <ComboBox x:Name="cmbChiNhanh" Margin="10 0 0 0" Foreground="Black" materialDesign:HintAssist.Hint="Chi nhánh" Style="{StaticResource MaterialDesignFloatingHintComboBox}" FontFamily="Montserrat" FontSize="16" Loaded="loadChiNhanh" SelectionChanged="CmbChiNhanh_SelectionChanged">
                     <ComboBox.ItemTemplate>
                         <DataTemplate DataType="DTO.ChiNhanh">
-                            <TextBlock Text="{Binding TenChiNhanh}"></TextBlock>
+                            <TextBlock FontFamily="Montserrat" Text="{Binding TenChiNhanh}"></TextBlock>
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
                 </ComboBox>
                 <materialDesign:PopupBox Foreground="Black"  Margin="10" PlacementMode="BottomAndAlignRightEdges" StaysOpen="false" FontFamily="Times New Roman">
                     <StackPanel Width="150">
-                            <StackPanel x:Name="customerLogin">
-                                <StackPanel>
-                                    <Image Source="Assets/user.png" Width="50" Height="50"></Image>
-                                    <Button Cursor="Hand" x:Name="customerName" Margin="0 5 0 0" HorizontalAlignment="Center"></Button>
-                                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                                        <TextBlock Foreground="Red" x:Name="customerPoint" FontStyle="Italic" FontWeight="Bold"></TextBlock>
-                                        <TextBlock Foreground="Red" Text=" điểm" FontWeight="Bold"></TextBlock>
-                                    </StackPanel>
+                        <StackPanel x:Name="customerLogin">
+                            <StackPanel>
+                                <Image Source="Assets/user.png" Width="50" Height="50"></Image>
+                                <Button FontFamily="Montserrat" Cursor="Hand" x:Name="customerName" Margin="0 5 0 0" HorizontalAlignment="Center"></Button>
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                                    <TextBlock FontFamily="Montserrat" Foreground="Red" x:Name="customerPoint" FontStyle="Italic" FontWeight="Bold"></TextBlock>
+                                    <TextBlock FontFamily="Montserrat" Foreground="Red" Text=" điểm" FontWeight="Bold"></TextBlock>
                                 </StackPanel>
-                                <Separator></Separator>
-                                <Button x:Name="btnLogout" Content="Đăng xuất" Click="BtnLogout_Click"></Button>
                             </StackPanel>
-                            <StackPanel x:Name="notLogin" >
-                                <Button Content="Đăng nhập" Click="btnLogin_Click"></Button>
-                            </StackPanel>
+                            <Separator></Separator>
+                            <Button x:Name="btnLogout" FontFamily="Montserrat" Content="Đăng xuất" Click="BtnLogout_Click"></Button>
                         </StackPanel>
-                    
+                        <StackPanel x:Name="notLogin" >
+                            <Button Content="Đăng nhập" FontFamily="Montserrat" Click="btnLogin_Click"></Button>
+                        </StackPanel>
+                    </StackPanel>
+
                 </materialDesign:PopupBox>
             </StackPanel>
         </Grid>
@@ -87,13 +87,13 @@
                     <ListViewItem Height="60">
                         <StackPanel Orientation="Horizontal">
                             <materialDesign:PackIcon Margin="10" Kind="ViewDashboard" Width="25" Height="25" VerticalAlignment="Center"></materialDesign:PackIcon>
-                            <TextBlock Text="Thực đơn" VerticalAlignment="Center" Margin="20 10"></TextBlock>
+                            <TextBlock Text="Thực đơn" FontFamily="Montserrat" VerticalAlignment="Center" Margin="20 10"></TextBlock>
                         </StackPanel>
                     </ListViewItem>
                     <ListViewItem Height="60">
                         <StackPanel Orientation="Horizontal">
                             <materialDesign:PackIcon Margin="10" Kind="LibraryBooks" Width="25" Height="25" VerticalAlignment="Center"></materialDesign:PackIcon>
-                            <TextBlock Text="Quản lý đơn hàng" VerticalAlignment="Center" Margin="20 10"></TextBlock>
+                            <TextBlock Text="Quản lý đơn hàng" FontFamily="Montserrat" VerticalAlignment="Center" Margin="20 10"></TextBlock>
                         </StackPanel>
                     </ListViewItem>
                 </ListView>
