--- a/GUI/ThucDon.xaml
+++ b/GUI/ThucDon.xaml
@@ -27,18 +27,18 @@
                                 <Image HorizontalAlignment="Center" Source="{Binding HinhAnh}" Width="156" Height="120" Margin="14,0,20.4,0"/>
                             </StackPanel>
                             <StackPanel  Canvas.Left="0" Canvas.Top="125" Width="190">
-                                <TextBlock FontFamily="Montserrat" HorizontalAlignment="Center" Text="{Binding TenMon}" RenderTransformOrigin="0.51,0.095"></TextBlock>
+                                <TextBlock FontFamily="Montserrat" HorizontalAlignment="Center" FontSize="16px" Text="{Binding TenMon}" RenderTransformOrigin="0.51,0.095"></TextBlock>
                             </StackPanel>
                             <StackPanel  Canvas.Top="140" Canvas.Left="0" Width="190">
                                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                                    <TextBlock FontFamily="Montserrat" Text="Số lượng còn lại: " Canvas.Left="37" Canvas.Top="151"></TextBlock>
-                                    <TextBlock  FontFamily="Montserrat" Text="{Binding SoLuong}" Canvas.Left="135" Canvas.Top="152"></TextBlock>
+                                    <TextBlock FontFamily="Montserrat" Text="Số lượng còn lại: " FontSize="16px" Canvas.Left="37" Canvas.Top="151"></TextBlock>
+                                    <TextBlock  FontFamily="Montserrat" Text="{Binding SoLuong}" FontSize="16px" Canvas.Left="135" Canvas.Top="151"></TextBlock>
                                 </StackPanel>
                             </StackPanel>
                             <StackPanel Canvas.Top="155" Canvas.Left="0" Width="190">
                                 <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
-                                    <TextBlock FontFamily="Montserrat" Foreground="Red" FontWeight="Bold" Text="{Binding DonGia}"></TextBlock>
-                                    <TextBlock FontFamily="Montserrat" Foreground="Red" FontWeight="Bold" Text=" VND"></TextBlock>
+                                    <TextBlock FontFamily="Montserrat" FontSize="16px" Foreground="Red" FontWeight="Bold" Text="{Binding DonGia}"></TextBlock>
+                                    <TextBlock FontFamily="Montserrat" FontSize="16px" Foreground="Red" FontWeight="Bold" Text=" VND"></TextBlock>
                                 </StackPanel>
                             </StackPanel>
                             <StackPanel  Canvas.Left="0" Canvas.Top="180" Width="190">
