--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -58,7 +58,8 @@
                                 <Button Cursor="Hand" x:Name="customerName" Margin="0 5 0 0" HorizontalAlignment="Center"></Button>
                                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                                     <TextBlock Foreground="Red" x:Name="customerPoint" FontStyle="Italic" FontWeight="Bold"></TextBlock>
-                                    <TextBlock Foreground="Red" Text=" điểm" FontWeight="Bold"></TextBlock>
+                                    <!--<TextBlock Foreground="Red" Text=" điểm" FontWeight="Bold"></TextBlock>-->
+                                    <TextBlock Foreground="Red" x:Name="nameBranch" FontStyle="Italic" FontWeight="Bold"></TextBlock>
                                 </StackPanel>
                             </StackPanel>
                             <Separator></Separator>
@@ -69,7 +70,7 @@
                         </StackPanel>
                     </StackPanel>
 
-                </materialDesign:PopupBox>
+                <!--</materialDesign:PopupBox>
                 <materialDesign:PopupBox Foreground="Black"  Margin="10" PlacementMode="BottomAndAlignRightEdges" StaysOpen="false" FontFamily="Times New Roman">
                     <StackPanel Width="150">
                         <StackPanel x:Name="memberLogin">
@@ -88,7 +89,7 @@
                         <StackPanel x:Name="memberNotLogin" >
                             <Button Content="Đăng nhập" Click="btnLogin_Click"></Button>
                         </StackPanel>
-                    </StackPanel>
+                    </StackPanel>-->
 
                 </materialDesign:PopupBox>
 
